Fixed issue on mobile with section height at 100vh

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,6 @@ h6 {
 section {
   background-color: var(--CodGray);
   padding: 1rem;
-  height: 100vh;
   position: relative;
 }
 
